# flam-edge-detection

./: App.tsx  README.md  app.json  package-lock.json  package.json
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/com/flam_assigment/: EdgeDetectionModule.java  EdgeDetectionPackage.java  MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
android/opencv/: build.gradle
ios/: Podfile
ios/flam_assigment/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/flam_assigment.xcodeproj/: project.pbxproj
ios/flam_assigment.xcodeproj/xcshareddata/xcschemes/: flam_assigment.xcscheme
web/: package.json
web/pages/: index.tsx
web/pages/api/: process.ts
